# aws-rs

./: .travis.yml  Cargo.toml  LICENSE
fixtures/: credentials.ini
src/: client.rs  credentials.rs  glacier.rs  lib.rs  request.rs  test.rs
src/parsers/ec2query/: deserialize.rs
src/service/: mod.rs
src/service/ec2/: mod.rs
src/signers/: http_headers.rs  mod.rs  sigv4.rs
