[package]

name = "aws"
version = "0.0.1"
authors = ["Thom May <thom@may.lt>"]

[dependencies]
openssl = "*"
curl = "*"
time = "*"
url = "*"
log = "*"
rustc-serialize = "*"

[dependencies.rust-ini]
# git = "https://github.com/zonyitoo/rust-ini.git"
git = "https://github.com/thommay/rust-ini.git"
branch = "20150204_nightly"

